--- a/assets/css/porfolio.css
+++ b/assets/css/porfolio.css
@@ -1297,6 +1297,7 @@
     .footer-header {
       width: 96%;
       font-size: 2rem;
+      margin-bottom: 50px;
     }
       
     .modal-container {
