--- a/assets/css/porfolio.css
+++ b/assets/css/porfolio.css
@@ -799,6 +799,12 @@
   margin-top: -70px;
 }
 
+video {
+  display: none;
+  width: 50%;
+  height: 400px;
+ }
+
 .footer-header {
   font-size: 3rem;
     position: absolute;
@@ -806,7 +812,6 @@
     color: var(--text-color);
     line-height: 3.6rem;
     padding: 0 16px;
-    margin-top: 600px;
 }
 
 
